[package]
name = "hellojudge3-judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-trait = "0.1.52"
bollard = "0.11.1"
celery = "0.4.0-rcn.11"
config = "0.12.0"
flexi_logger = "0.22.3"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = "0.11.9"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = "1.17.0"
url = "2.2.2"
