[package]
name = "hellojudge3-judger"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-trait = "0.1.52"
async_zip = "0.0.6"
base64 = "0.13.0"
bollard = "0.11.1"
celery = "0.4.0-rcn.11"
chrono = "0.4.19"
config = "0.12.0"
flexi_logger = "0.22.3"
futures-util = "0.3.21"
lazy_static = "1.4.0"
libc = "0.2.119"
log = "0.4.14"
regex = "1.5.4"
reqwest = "0.11.9"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tempfile = "3.3.0"
tokio = "1.17.0"
url = "2.2.2"

[profile.release]
opt-level = 3
lto = true
debug = 0
overflow-checks = false
